--- a/scratch/newstyles.css
+++ b/scratch/newstyles.css
@@ -111,3 +111,7 @@ figcaption {
   width: 100%;
   height: 100%;
 }
+ul {
+  list-style-type: disc; /* Use disc for filled bullets */
+  /* Additional styles can be added here */
+}
